# Homunculus-Weave

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  PERSONA.md  README.md  SECURITY.md  STRUCTURE.md  ShadowGrandDigest.txt
.claude/: CLAUDE.local.md
Expertises/GeneralConstructor/: .gitignore  CLAUDE.md  SKILL.md  WORKFLOW.md  pyproject.toml
Expertises/GeneralConstructor/ClaudeSkills/: SKILL.md
Expertises/GeneralConstructor/python/: README.md  __init__.py  calculator.py  loader.py  main.py
Expertises/GeneralConstructor/python/data/: ビジネスルール一覧.json  土質試験内容判定ロジック.json
Expertises/GeneralConstructor/python/schema/: __init__.py  models.py  tables.py
Expertises/GeneralConstructor/tests/: test_calculator.py  test_integration.py  test_loader.py  test_schema.py
Expertises/GeneralConstructor/tests/fixtures/: case_001_itabashi.json
Expertises/NewsCaster/: .gitignore  CHANGELOG.md  README.md  ROUTINE_PROMPT.md  SKILL.md  bootstrap.sh  pyproject.toml
Expertises/NewsCaster/scripts/: bootstrap.sh  main.py
Expertises/NewsCaster/scripts/adapters/mail/: gmail_api_mail_gateway.py  mime_builder.py
Expertises/NewsCaster/scripts/adapters/rss/: rss_xml_gateway.py
Expertises/NewsCaster/scripts/adapters/state/: json_state_store.py
Expertises/NewsCaster/scripts/domain/: config.py  date_range.py  digest.py  exceptions.py  feed_policy.py  feed_source.py  models.py
Expertises/NewsCaster/scripts/infrastructure/: google_oauth_provider.py
Expertises/NewsCaster/scripts/tests/: test_main.py
Expertises/NewsCaster/scripts/tests/adapters/: test_gmail_api_mail_gateway.py  test_json_state_store.py  test_rss_xml_gateway.py
Expertises/NewsCaster/scripts/tests/adapters/fixtures/: sample_multi_category.xml  sample_rss.xml
Expertises/NewsCaster/scripts/tests/domain/: test_config.py  test_date_range.py  test_digest.py  test_feed_policy.py  test_feed_source.py  test_models.py
Expertises/NewsCaster/scripts/tests/usecases/: test_fetch_and_filter.py  test_format_digest.py  test_run_daily_digest.py  test_send_digest_email.py  test_send_rendered.py
Expertises/NewsCaster/scripts/usecases/: fetch_and_filter.py  format_digest.py  ports.py  run_daily_digest.py  send_digest_email.py  send_rendered.py
Expertises/TelegramSecretary/: .gitattributes  .gitignore  CHANGELOG.md  DESIGN.md  DOCUMENTATION_PLAN.md  GOAL_KEEPALIVE_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  ROUTINE_PROMPT.md  SECURITY.md  SETUP.md  SKILL.md  STRUCTURE.md  bootstrap.sh  config.json  pyproject.toml  watch_loop.sh
Expertises/TelegramSecretary/.claude-plugin/: plugin.json
Expertises/TelegramSecretary/LineBridge/: IMPLEMENTATION_PLAN.md
Expertises/TelegramSecretary/commands/: telegram-secretary.md
Expertises/TelegramSecretary/docs/devlog/: DOCUMENTATION_PLAN.md  GOAL_KEEPALIVE_PLAN.md  IMPLEMENTATION_PLAN.md
Expertises/TelegramSecretary/scripts/: main.py
Expertises/TelegramSecretary/scripts/adapters/: atomic_io.py  media_failure.py
Expertises/TelegramSecretary/scripts/adapters/audio/: ffmpeg_preprocessor.py
Expertises/TelegramSecretary/scripts/adapters/registry/: git_cli.py  json_registry_store.py
Expertises/TelegramSecretary/scripts/adapters/render/: markitdown_renderer.py  pdf_renderer.py
Expertises/TelegramSecretary/scripts/adapters/state/: emitter.py  json_state_store.py
Expertises/TelegramSecretary/scripts/adapters/telegram/: api_gateway.py  http_retry.py  media_downloader.py
Expertises/TelegramSecretary/scripts/adapters/transcribe/: moonshine_transcriber.py
Expertises/TelegramSecretary/scripts/adapters/wal/: __init__.py  jsonl_wal_log_store.py
Expertises/TelegramSecretary/scripts/domain/: authorization.py  exceptions.py  lease.py  media.py  models.py  normalize.py  offset.py  outbound.py  registry.py  session_config.py  wal.py  watch_window.py
Expertises/TelegramSecretary/scripts/infrastructure/: archive_rotate.py  composition.py  config.py  exit_codes.py  media_cleanup.py  registry_cli.py  wal_cli.py
Expertises/TelegramSecretary/scripts/tests/: conftest.py  test_main.py
Expertises/TelegramSecretary/scripts/tests/adapters/: test_atomic_io.py  test_media_failure.py
Expertises/TelegramSecretary/scripts/tests/adapters/audio/: test_ffmpeg_preprocessor.py
Expertises/TelegramSecretary/scripts/tests/adapters/registry/: test_git_cli.py  test_json_registry_store.py
Expertises/TelegramSecretary/scripts/tests/adapters/render/: test_markitdown_renderer.py  test_pdf_renderer.py
Expertises/TelegramSecretary/scripts/tests/adapters/state/: test_emitter.py  test_json_state_store.py
Expertises/TelegramSecretary/scripts/tests/domain/: test_authorization.py  test_lease.py  test_media.py  test_models.py  test_normalize.py  test_offset.py  test_outbound.py  test_registry.py  test_session_config.py  test_wal.py  test_watch_window.py
Expertises/TelegramSecretary/scripts/tests/infrastructure/: test_archive_rotate.py  test_composition.py  test_config.py  test_exit_codes.py  test_media_cleanup.py  test_registry_cli.py  test_templates.py  test_wal_cli.py
Expertises/TelegramSecretary/scripts/tests/usecases/: fakes.py  test_acquire_lease.py  test_download_authorized_media.py  test_fetch_authorized_updates.py  test_lease_lifecycle.py  test_manage_registry.py  test_outbound.py  test_proactive_send.py  test_registry_sync.py  test_render_authorized_media.py  test_send_reply.py  test_wal_usecases.py
Expertises/TelegramSecretary/scripts/usecases/: acquire_lease.py  download_authorized_media.py  fetch_authorized_updates.py  manage_registry.py  outbound.py  ports.py  proactive_send.py  registry_sync.py  release_lease.py  render_authorized_media.py  renew_lease.py  send_reply.py  wal.py
Expertises/TelegramSecretary/skills/telegram-secretary/: SKILL.md
Expertises/TelegramSecretary/templates/: ABILITIES.template.json  GOALS.template.json  INDIVIDUALS.template.json  KNOWLEDGE.template.json  PROFILE.template.json  STEPS.template.json  SecretaryRole.template.md  TASKS.template.json  config.template.json  env.example
Expertises/TelegramSecretary/templates/Identities/: SecretaryRole.template.md
(+109 files in other folders)
