[project]
name = "telegramsecretary"
version = "0.1.0"
description = "Telegram Bot API の long-polling を Cloud Routine 上で常駐させ、認可済みチャットからのメッセージに Weave（SecretaryRole）が即応する対話チャネル"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    # Stage 7: ドキュメント系 mime (docx/pptx/xlsx) を markdown 化して Weave に渡す。
    # markitdown が内部で mammoth (docx 読込) / python-pptx / openpyxl /
    # magika (ML model) / onnxruntime 等の再帰依存を連れてくる点に留意。
    # ※ docx 読込は mammoth であり python-docx は引かれない（python-docx は書込用）。
    #   テストは fixture 生成に python-docx を使うため dev extras 側で別途宣言する。
    "markitdown[docx,pptx,xlsx]>=0.1.6",
    # Stage 9: voice/audio/video の音声トラックを STT で transcript 化。
    # moonshine-voice = Moonshine 日本語 STT（torch-free・onnxruntime、日本語 base-ja モデルは
    #   ランタイムDL ~134MB）。Community License は年商$1M未満は商用も無料だが、めぐる組の本番は
    #   Enterprise License が必要 → 本番商用化前に Enterprise 契約 or kotoba-whisper(Apache-2.0) へ
    #   MediaRenderer Port 差し替え（IMPLEMENTATION_PLAN Stage 9.5 申し送り参照）。
    # av (PyAV) = ffmpeg を wheel 内包し OGG/OPUS/mp4 を 16kHz mono float へ decode（システム ffmpeg 不要）。
    "moonshine-voice>=0.0.59",
    "av>=17.0",
    # Stage 10: PDF のテキスト層を抽出して rendered_text に載せ、passthrough(Read tool 依存)から
    # render(Read tool 非依存)へ移行。pdfplumber は MIT（配布安全）。pymupdf(AGPL) は同等品質だが
    # 配布制約のため不採用（IMPLEMENTATION_PLAN Stage 10 Decision Notes 参照）。pure-python。
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.23",
    # テスト fixture を動的生成するための書込ライブラリ群（git に巨大バイナリを置かない方針）。
    # python-docx は markitdown[docx] では引かれない（読込は mammoth）ため必須。
    # python-pptx / openpyxl は markitdown[pptx,xlsx] でも入るが、テスト依存を
    # markitdown の内部依存に暗黙依存させず明示する（fresh clone / CI の再現性）。
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    # Stage 10: PDF fixture をテスト内で動的生成（git に巨大バイナリを置かない方針、
    # docx を python-docx で生成するのと同型）。reportlab は本番依存ではない。
    "reportlab>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
pythonpath = ["scripts"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/tests/*", "scripts/main.py"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
