[project]
name = "telegramsecretary"
version = "0.10.1"
description = "Telegram Bot API の long-polling を Cloud Routine 上で常駐させ、認可済みチャットからのメッセージに秘書エージェント（SecretaryRole）が即応する対話チャネル"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    # ドキュメント Markdown 化: docx/pptx/xlsx を markdown 化してエージェントに渡す。
    # markitdown が内部で mammoth (docx 読込) / python-pptx / openpyxl /
    # magika (ML model) / onnxruntime 等の再帰依存を連れてくる点に留意。
    # ※ docx 読込は mammoth であり python-docx は引かれない（python-docx は書込用）。
    #   テストは fixture 生成に python-docx を使うため dev extras 側で別途宣言する。
    "markitdown[docx,pptx,xlsx]>=0.1.6",
    # 音声 STT: voice/audio/video の音声トラックを transcript 化。
    # moonshine-voice = Moonshine 日本語 STT（torch-free・onnxruntime、日本語 base-ja モデルは
    #   ランタイムDL ~134MB）。Community License は年商$1M未満は商用も無料だが、年商 $1M 以上の本番は
    #   Enterprise License が必要 → 本番商用化前に Enterprise 契約 or kotoba-whisper(Apache-2.0) へ
    #   MediaRenderer Port 差し替え。
    # av (PyAV) = ffmpeg を wheel 内包し OGG/OPUS/mp4 を 16kHz mono float へ decode（システム ffmpeg 不要）。
    "moonshine-voice>=0.0.59",
    "av>=17.0",
    # PDF テキスト抽出: テキスト層を rendered_text に載せ、passthrough(Read tool 依存)から
    # render(Read tool 非依存)へ移行。pdfplumber は MIT（配布安全）。pymupdf(AGPL) は同等品質だが
    # 配布制約のため不採用。pure-python。
    "pdfplumber>=0.11",
    # PDF 画像化: スキャン・図面 PDF を pypdfium2 で全ページ画像化し to_pil() で png 保存（Vision 経路）。
    # pdf_renderer が pypdfium2 を直接 import するため直接依存として明示（pdfplumber>=0.11 が両者を
    # transitive に引くが、コードが直接使う依存は明示する原則＋再現性のため直接化）。
    # Pillow は pypdfium2.bitmap.to_pil() が要する（pypdfium2 は Pillow を任意依存にするため明示）。
    "pypdfium2>=4.18.0",
    "Pillow>=9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.23",
    # テスト fixture を動的生成するための書込ライブラリ群（git に巨大バイナリを置かない方針）。
    # python-docx は markitdown[docx] では引かれない（読込は mammoth）ため必須。
    # python-pptx / openpyxl は markitdown[pptx,xlsx] でも入るが、テスト依存を
    # markitdown の内部依存に暗黙依存させず明示する（fresh clone / CI の再現性）。
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    # PDF fixture: テスト内で動的生成（git に巨大バイナリを置かない方針、
    # docx を python-docx で生成するのと同型）。reportlab は本番依存ではない。
    "reportlab>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
pythonpath = ["scripts"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/tests/*", "scripts/main.py"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
